# ml-zoomcamp-project

./: .gitignore  Dockerfile  Dockerfile.mini  Dockerfile.new  Dockerfile.simple  Serverless.ipynb  app.py  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  train.py
loan_approval/: Dockerfile  Dockerfile.mini  Dockerfile.new  Dockerfile.simple  README.md  app.py  predict.py  train.py
